trying to get it to work

--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,7 @@
         }
       }
     }},
-  "defaultProject": "est1992-ang"
+  "cli": {
+    "analytics": "4a08cfd3-3772-412e-85fa-02c5a3f26104"
+  }
 }
