Revert "trying to get it to work"
This reverts commit 32923fbd0556626996fcf41ab5b0b8dca2b436d6.

--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,5 @@
         }
       }
     }},
-  "cli": {
-    "analytics": "4a08cfd3-3772-412e-85fa-02c5a3f26104"
-  }
+  "defaultProject": "est1992-ang"
 }
